--- a/AtencionTramites.Web/Views/ClasificacionTramites/ClasificacionTramite.cshtml
+++ b/AtencionTramites.Web/Views/ClasificacionTramites/ClasificacionTramite.cshtml
@@ -35,19 +35,32 @@
         color: white !important;
     }
 
-    #frmRadicado .tab-pane {
+    #frmInfoRadicado .tab-pane {
         display: none;
     }
 
-    #frmRadicado .active {
+    #frmInfoRadicado .active {
         display: block;
     }
-
-    #frmRadicadoDocumento .tab-pane {
+    #frmAnexosRadicado .tab-pane {
         display: none;
     }
 
-    #frmRadicadoDocumento .active {
+    #frmAnexosRadicado .active {
+        display: block;
+    }
+    #frmRegistroPeticionarios .tab-pane {
+        display: none;
+    }
+
+    #frmRegistroPeticionarios .active {
+        display: block;
+    }
+    #frmClasificacionPeticion .tab-pane {
+        display: none;
+    }
+
+    #frmClasificacionPeticion .active {
         display: block;
     }
 </style>
@@ -126,7 +139,7 @@
             </form>
         </div>
         <div id="menu2" class="tab-pane fade">
-            <div id="divMenu2">
+            <form id="frmRegistroPeticionarios">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse2" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
@@ -148,9 +161,9 @@
                                 <div class="row">
                                     <div class="col-md-10">
                                         <h3>Datos básicos del usuario (a)</h3>
-                                        @UltimusHelper.Dynamic("PeticionarioEE_TipoSolicitante")
+                                        @UltimusHelper.Dynamic("PeticionarioAT_TipoSolicitante")
                                         @UltimusHelper.Dynamic("PeticionarioAT_Anonimo")
-                                        @UltimusHelper.Dynamic("PeticionarioEE_TipoDocId")
+                                        @UltimusHelper.Dynamic("PeticionarioAT_TipoDocId")
                                         @UltimusHelper.Dynamic("PeticionarioAT_NumIdentificacion")
                                         @UltimusHelper.Dynamic("PeticionarioAT_Remitente")
                                         @UltimusHelper.Dynamic("PeticionarioAT_EstadoCivil")
@@ -193,10 +206,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
         <div id="menu3" class="tab-pane fade">
-            <div id="divMenu3">
+            <form id="frmClasificacionPeticion">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse3" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
@@ -219,14 +232,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
         <div id="menu4" class="tab-pane fade">
-            <div id="divMenu4">
+            <form id="frmConclusionPeticion">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse4" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Decisión
+                        &nbsp;Conclusión de la petición
                     </a>
                 </h3>
                 <div id="divCollapse4" class="panel-collapse collapse in">
@@ -237,7 +250,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 
