--- a/AtencionTramites.Web/Views/ClasificacionTramites/ClasificacionTramite.cshtml
+++ b/AtencionTramites.Web/Views/ClasificacionTramites/ClasificacionTramite.cshtml
@@ -8,6 +8,69 @@
 }
 
 <style>
+    body {
+        background-color: #ffffff;
+        color: #000000;
+    }
+
+    .infoUltimus {
+        color: #000000;
+    }
+
+    .MenuBar {
+        background-color: #6699ff;
+    }
+
+    .btn {
+        font-weight: bold !important;
+    }
+
+    .fade.in {
+        opacity: 1;
+    }
+
+    .btn-success {
+        background-color: #5cb85c !important;
+        color: #fff !important;
+        border-color: #4cae4c !important;
+    }
+
+    .btn-sm {
+        padding: 5px 10px 5px 5px !important;
+        font-size: 13px !important;
+    }
+
+    .btn-sm {
+        padding: 5px 10px 5px 5px !important;
+        font-size: 13px !important;
+    }
+
+    .columna {
+        flex-grow: 1; /* Hace que las columnas ocupen el espacio disponible */
+        flex: 1; /* Hace que cada columna ocupe un espacio igual */
+        padding: 10px; /* Añade un poco de espacio alrededor del contenido de cada columna */
+    }
+
+    .contenedor {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+        place-items: center;
+    }
+
+    .HeaderToggle {
+        background-color: #6699ff;
+    }
+
+    .BaseHeader {
+        background-color: #ffffff !important;
+    }
+
     .myNav .nav-pills > li.active > a {
         background-color: #04A29C !important;
         color: white !important;
@@ -42,6 +105,7 @@
     #frmInfoRadicado .active {
         display: block;
     }
+
     #frmAnexosRadicado .tab-pane {
         display: none;
     }
@@ -49,6 +113,7 @@
     #frmAnexosRadicado .active {
         display: block;
     }
+
     #frmRegistroPeticionarios .tab-pane {
         display: none;
     }
@@ -56,6 +121,7 @@
     #frmRegistroPeticionarios .active {
         display: block;
     }
+
     #frmClasificacionPeticion .tab-pane {
         display: none;
     }
@@ -66,7 +132,7 @@
 </style>
 
 
-<div id="divRespuesta" class="myNav">    
+<div id="divRespuesta" class="myNav">
     <ul class="nav nav-pills nav-justified">
         <li id="liMenu0" class="active">
             <a data-toggle="tab" href="#menu0">Información del radicado</a>
@@ -253,7 +319,7 @@
             </form>
         </div>
     </div>
-
+</div>
 
 @section scripts{
     @Scripts.Render("~/Scripts/ClasificacionTramites/ClasificacionTramite")
