Se crean artefactos del proceso de asesorias

--- a/AtencionTramites.Web/Views/AtencionTramiteAse/Aprobar.cshtml
+++ b/AtencionTramites.Web/Views/AtencionTramiteAse/Aprobar.cshtml
@@ -1,7 +1,350 @@
-﻿
-@{
-    ViewBag.Title = "Aprobar";
+﻿@{
+    bool FileInputRespuestaReadonly = ViewBag.TaskStatus != "1";
+}
+@section ButtonOption {
+    @UltimusHelper.Button("Botones_ImprimirPantalla", "btn btn-warning btn-sm", "fa fa-print", "Imprimir Pantalla", false)
+    @UltimusHelper.Button("Botones_GuardarRadicado", "btn btn-success btn-sm", "fa fa-floppy-o", "Radicar / Guardar", false)
+    @UltimusHelper.Button("Botones_VerDocumento", "btn btn-default btn-sm", "fa fa-eye", "Ver Documento", false)
+    @UltimusHelper.Button("Botones_Completar", "btn btn-danger btn-sm", "fa fa-circle-o", "Enviar", false)
 }
 
-<h2>Aprobar</h2>
+<style>
+    body {
+        background-color: #ffffff;
+        color: #000000;
+    }
 
+    .infoUltimus {
+        color: #000000;
+    }
+
+    .MenuBar {
+        background-color: #6699ff;
+    }
+
+    .btn {
+        font-weight: bold !important;
+    }
+
+    .fade.in {
+        opacity: 1;
+    }
+
+    .btn-success {
+        background-color: #5cb85c !important;
+        color: #fff !important;
+        border-color: #4cae4c !important;
+    }
+
+    .btn-sm {
+        padding: 5px 10px 5px 5px !important;
+        font-size: 13px !important;
+    }
+
+    .btn-sm {
+        padding: 5px 10px 5px 5px !important;
+        font-size: 13px !important;
+    }
+
+    .columna {
+        flex-grow: 1; /* Hace que las columnas ocupen el espacio disponible */
+        flex: 1; /* Hace que cada columna ocupe un espacio igual */
+        padding: 10px; /* Añade un poco de espacio alrededor del contenido de cada columna */
+    }
+
+    .contenedor {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+        place-items: center;
+    }
+
+    .HeaderToggle {
+        background-color: #6699ff;
+    }
+
+    .BaseHeader {
+        background-color: #ffffff !important;
+    }
+
+    .myNav .nav-pills > li.active > a {
+        background-color: #04A29C !important;
+        color: white !important;
+    }
+
+    .myNav .nav-tabs > li.active > a {
+        background-color: #04A29C !important;
+        color: white !important;
+    }
+
+    .myNav .nav a {
+        color: #808080;
+        background-color: #d6d6d6;
+        border-color: #808080;
+    }
+
+        .myNav .nav a:hover {
+            background-color: #78c9c6 !important;
+            color: #000000 !important;
+            opacity: 0.5;
+        }
+
+    .myNav .nav-active {
+        background-color: #04A29C !important;
+        color: white !important;
+    }
+
+    #frmInfoRadicado .tab-pane {
+        display: none;
+    }
+
+    #frmInfoRadicado .active {
+        display: block;
+    }
+
+    #frmRadicado .tab-pane {
+        display: none;
+    }
+
+    #frmRadicado .active {
+        display: block;
+    }
+
+    #frmRadicadoDocumento .tab-pane {
+        display: none;
+    }
+
+    #frmRadicadoDocumento .active {
+        display: block;
+    }
+
+    #frmRadicadoEnviado .tab-pane {
+        display: none;
+    }
+
+    #frmRadicadoEnviado .active {
+        display: block;
+    }
+
+    #frmAnexosRadicado .tab-pane {
+        display: none;
+    }
+
+    #frmAnexosRadicado .active {
+        display: block;
+    }
+
+    #frmRegistroPeticionarios .tab-pane {
+        display: none;
+    }
+
+    #frmRegistroPeticionarios .active {
+        display: block;
+    }
+
+    #frmDecision .tab-pane {
+        display: none;
+    }
+
+    #frmDecision .active {
+        display: block;
+    }
+</style>
+
+
+<div id="divRespuesta" class="myNav">
+    <ul class="nav nav-pills nav-justified">
+        <li id="liMenuInfoRadicado">
+            <a data-toggle="tab" href="#menuInfoRadicado">Información del radicado</a>
+        </li>
+        <li id="liMenuRadicadoEnviado" class="active">
+            <a data-toggle="tab" href="#menu1">Radicado Enviado</a>
+        </li>
+        <!--
+        <li id="liMenu2"><a data-toggle="tab" href="#menu2">Radicado Recibido</a></li>-->
+        <li id="liMenuAnexos"><a data-toggle="tab" href="#menuAnexos">Anexos</a></li>
+        <li id="liMenuDecision"><a data-toggle="tab" href="#menuDecision">Decisión</a></li>
+    </ul>
+    <div class="tab-content">
+        <div id="menuInfoRadicado" class="tab-pane fade in active">
+            <form id="frmInfoRadicado">
+                <h3 class="TituloAcordeon">
+                    <a data-toggle="collapse" href="#divCollapseInfoRadicado" style="color: black; text-decoration: none;">
+                        <i class="fa fa-chevron-circle-down"></i>
+                        &nbsp;Radicado Enviado
+                    </a>
+                </h3>
+                <div id="divCollapseInfoRadicado" class="panel-collapse collapse in">
+                    <div class="contenedor">
+                        <div class="columna">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Datos básicos del peticionario</h3>
+
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_NumeroRadicado")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_CanalAtencion")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_Fecha")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_TipoSolicitante")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_EsAnonimo")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_TipoDocId")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_NumIdentificacion")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_Remitente")
+                                </div>
+                            </div>
+                        </div>
+                        <div class="columna">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Datos enfoques diferenciales y de género</h3>
+
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_MiembroGrupoEtnico")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_SexoAsignado")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_IdentidadGenero")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_OrientacionSexual")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_ExpresionGenero")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_RangoEdad")
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div id="menuRadicadoEnviado" class="tab-pane fade in active">
+            <form id="frmRadicadoEnviado">
+                <h3 class="TituloAcordeon">
+                    <a data-toggle="collapse" href="#divCollapseRadicadoEnviado" style="color: black; text-decoration: none;">
+                        <i class="fa fa-chevron-circle-down"></i>
+                        &nbsp;Radicado Enviado
+                    </a>
+                </h3>
+                <div id="divCollapseRadicadoEnviado" class="panel-collapse collapse in">
+                    <div class="contenedor">
+                        <div class="columna">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_NumeroRadicado")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Fecha")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Entidad")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Dependencia")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Formato")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Calificativo")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Nombre")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Cargo")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Ciudad")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Correo")
+                                    <div class="text-right">
+                                        @UltimusHelper.Dynamic("RadicadoEnviadoAT_RespuestaAdicional")
+                                    </div>
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Folios")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Anexos")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_EsUrgente")
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Asunto")
+                                </div>
+                            </div>
+                        </div>
+                        <div class="columna">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Cuerpo</h3>
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Orientacion")
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div id="menuAnexos" class="tab-pane fade">
+            <form id="frmAnexosRadicado">
+                <h3 class="TituloAcordeon">
+                    <a data-toggle="collapse" href="#divCollapseAnexos" style="color: black; text-decoration: none;">
+                        <i class="fa fa-chevron-circle-down"></i>
+                        &nbsp;Anexos del Radicado Enviado
+                    </a>
+                </h3>
+                <div id="divCollapseAnexos" class="panel-collapse collapse in">
+                    <div class="row">
+                        <div class="col-md-6">
+                            @UltimusHelper.Dynamic("AnexosRadicadoAT_AnexosLista")
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div id="menuDecision" class="tab-pane fade">
+            <form id="frmDecision">
+                <h3 class="TituloAcordeon">
+                    <a data-toggle="collapse" href="#divCollapseDecision" style="color: black; text-decoration: none;">
+                        <i class="fa fa-chevron-circle-down"></i>
+                        &nbsp;Decisión
+                    </a>
+                </h3>
+                <div id="divCollapseDecision" class="panel-collapse collapse in">
+                    <div class="row">
+                        <div class="col-md-6">
+                            @UltimusHelper.Dynamic("RespuestaDecision_Comentarios")
+                            @UltimusHelper.Dynamic("RespuestaDecision_Decision")
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
+
+@section Modals{
+    <div class="modal fade" id="modalRespuestaAdicional" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static" style="display: none;">
+        <div class="modal-dialog modal-lg" style="width:80%; height:650px;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                    <form id="frmRespuestaAdicional">
+                        <div class="row">
+                            <div class="col-md-12">
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_SolicitudOriginal")
+                            </div>
+                            <div class="col-md-6">
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_Calificativo")
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_Nombre")
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_Cargo")
+                            </div>
+                            <div class="col-md-6">
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_Entidad")
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_Ciudad")
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_Correo")
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-right">
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_Agregar")
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                @UltimusHelper.Dynamic("RespuestaAdicionalAT_RespuestaAdicionalList")
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">
+                        <strong>&nbsp;<i class="fa fa-reply"></i>&nbsp;Cerrar</strong>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+@section scripts{
+    @Scripts.Render("~/Scripts/AtencionTramitesAse/Aprobar")
+}
