--- a/AtencionTramites.Web/Views/AtencionTramiteAse/GenerarDocumento.cshtml
+++ b/AtencionTramites.Web/Views/AtencionTramiteAse/GenerarDocumento.cshtml
@@ -99,6 +99,14 @@
         color: white !important;
     }
 
+    #frmInfoRadicado .tab-pane {
+        display: none;
+    }
+
+    #frmInfoRadicado .active {
+        display: block;
+    }
+
     #frmRadicado .tab-pane {
         display: none;
     }
@@ -114,9 +122,6 @@
     #frmRadicadoDocumento .active {
         display: block;
     }
-
-
-
 
     #frmRadicadoEnviado .tab-pane {
         display: none;
@@ -154,24 +159,71 @@
 
 <div id="divRespuesta" class="myNav">
     <ul class="nav nav-pills nav-justified">
-        <li id="liMenu0" class="active">
-            <a data-toggle="tab" href="#menu0">Radicado Enviado</a>
+        <li id="liMenuInfoRadicado">
+            <a data-toggle="tab" href="#menuInfoRadicado">Información del radicado</a>
+        </li>
+        <li id="liMenuRadicadoEnviado" class="active">
+            <a data-toggle="tab" href="#menuRadicadoEnviado">Radicado Enviado</a>
         </li>
         <!--
-        <li id="liMenu1"><a data-toggle="tab" href="#menu1">Radicado Recibido</a></li>
-        <li id="liMenu2"><a data-toggle="tab" href="#menu2">Anexos</a></li>  -->
-        <li id="liMenu3"><a data-toggle="tab" href="#menu3">Decisión</a></li>
+    <li id="liMenu2"><a data-toggle="tab" href="#menu2">Radicado Recibido</a></li>-->
+        <li id="liMenuAnexos"><a data-toggle="tab" href="#menuAnexos">Anexos</a></li>
+        <li id="liMenuDecision"><a data-toggle="tab" href="#menuDecision">Decisión</a></li>
     </ul>
     <div class="tab-content">
-        <div id="menu0" class="tab-pane fade in active">
-            <form id="frmRadicadoEnviado">
+        <div id="menuInfoRadicado" class="tab-pane fade in active">
+            <form id="frmInfoRadicado">
                 <h3 class="TituloAcordeon">
-                    <a data-toggle="collapse" href="#divCollapse0" style="color: black; text-decoration: none;">
+                    <a data-toggle="collapse" href="#divCollapseInfoRadicado" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
                         &nbsp;Radicado Enviado
                     </a>
                 </h3>
-                <div id="divCollapse0" class="panel-collapse collapse in">
+                <div id="divCollapseInfoRadicado" class="panel-collapse collapse in">
+                    <div class="contenedor">
+                        <div class="columna">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Datos básicos del peticionario</h3>
+
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_NumeroRadicado")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_CanalAtencion")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_Fecha")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_TipoSolicitante")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_EsAnonimo")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_TipoDocId")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_NumIdentificacion")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_Remitente")
+                                </div>
+                            </div>
+                        </div>
+                        <div class="columna">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Datos enfoques diferenciales y de género</h3>
+
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_MiembroGrupoEtnico")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_SexoAsignado")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_IdentidadGenero")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_OrientacionSexual")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_ExpresionGenero")
+                                    @UltimusHelper.Dynamic("InfoRadicadoAT_RangoEdad")
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div id="menuRadicadoEnviado" class="tab-pane fade in active">
+            <form id="frmRadicadoEnviado">
+                <h3 class="TituloAcordeon">
+                    <a data-toggle="collapse" href="#divCollapseRadicadoEnviado" style="color: black; text-decoration: none;">
+                        <i class="fa fa-chevron-circle-down"></i>
+                        &nbsp;Radicado Enviado
+                    </a>
+                </h3>
+                <div id="divCollapseRadicadoEnviado" class="panel-collapse collapse in">
                     <div class="contenedor">
                         <div class="columna">
                             <div class="row">
@@ -199,24 +251,41 @@
                         <div class="columna">
                             <div class="row">
                                 <div class="col-md-6">
-                                        <h3>Cuerpo</h3>
-                                        @UltimusHelper.Dynamic("RadicadoEnviadoAT_Orientacion")
-                                    </div>
+                                    <h3>Cuerpo</h3>
+                                    @UltimusHelper.Dynamic("RadicadoEnviadoAT_Orientacion")
                                 </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
-        <div id="menu3" class="tab-pane fade">
+        <div id="menuAnexos" class="tab-pane fade">
+            <form id="frmAnexosRadicado">
+                <h3 class="TituloAcordeon">
+                    <a data-toggle="collapse" href="#divCollapseAnexos" style="color: black; text-decoration: none;">
+                        <i class="fa fa-chevron-circle-down"></i>
+                        &nbsp;Anexos del Radicado Enviado
+                    </a>
+                </h3>
+                <div id="divCollapseAnexos" class="panel-collapse collapse in">
+                    <div class="row">
+                        <div class="col-md-6">
+                            @UltimusHelper.Dynamic("AnexosRadicadoAT_AnexosLista")
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div id="menuDecision" class="tab-pane fade">
             <form id="frmDecision">
                 <h3 class="TituloAcordeon">
-                    <a data-toggle="collapse" href="#divCollapse3" style="color: black; text-decoration: none;">
+                    <a data-toggle="collapse" href="#divCollapseDecision" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
                         &nbsp;Decisión
                     </a>
                 </h3>
-                <div id="divCollapse3" class="panel-collapse collapse in">
+                <div id="divCollapseDecision" class="panel-collapse collapse in">
                     <div class="row">
                         <div class="col-md-6">
                             @UltimusHelper.Dynamic("RespuestaDecision_Comentarios")
