Cambios nuevos de Leonardo

--- a/AtencionTramites.Web/Views/AtencionTramiteSol/GestionPeticion.cshtml
+++ b/AtencionTramites.Web/Views/AtencionTramiteSol/GestionPeticion.cshtml
@@ -4,6 +4,8 @@
 @section ButtonOption {
     @UltimusHelper.Button("BotonesAT_ImprimirPantalla", "btn btn-warning btn-sm", "fa fa-print", "Imprimir Pantalla", false)
     @UltimusHelper.Button("BotonesAT_GuardarRadicado", "btn btn-success btn-sm", "fa fa-floppy-o", "Radicar / Guardar", false)
+    @UltimusHelper.Button("BotonesAT_Completar", "btn btn-danger btn-sm", "fa fa-circle-o", "Ver Tramite", false)
+    @UltimusHelper.Button("BotonesAT_GuardarRadicado", "btn btn-success btn-sm", "fa fa-floppy-o", "Ver Etiqueta", false)
     @UltimusHelper.Button("BotonesAT_Completar", "btn btn-danger btn-sm", "fa fa-circle-o", "Enviar", false)
 }
 
@@ -134,21 +136,29 @@
 
 <div id="divRespuesta" class="myNav">
     <ul class="nav nav-pills nav-justified">
-        <li id="liMenu0" class="active">
+        <li id="liMenu0">
             <a data-toggle="tab" href="#menu0">Información del radicado</a>
         </li>
-        <li id="liMenu1"><a data-toggle="tab" href="#menu1">Anexos del Radicado recibido</a></li>
-        <li id="liMenu2"><a data-toggle="tab" href="#menu2">Registro de peticionarios</a></li>
-        <li id="liMenu3"><a data-toggle="tab" href="#menu3">Clasificación de la petición</a></li>
-        <li id="liMenu4"><a data-toggle="tab" href="#menu4">Conclusión de la petición</a></li>
+        <li id="liMenu1">
+            <a data-toggle="tab" href="#menu1">Anexos del Radicado recibido</a>
+        </li>
+        <li id="liMenu2">
+            <a data-toggle="tab" href="#menu2">Clasificación de la petición</a>
+        </li>
+        <li id="liMenu3"  class="active">
+            <a data-toggle="tab" href="#menu3">Gestión de la petición</a>
+        </li>
+        <li id="liMenu4">
+            <a data-toggle="tab" href="#menu4">Decisión</a>
+        </li>
     </ul>
     <div class="tab-content">
-        <div id="menu0" class="tab-pane fade in active">
+        <div id="menu0" class="tab-pane fade">
             <form id="frmInfoRadicado">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse0" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Radicado Enviado
+                        &nbsp;Información del radicado
                     </a>
                 </h3>
                 <div id="divCollapse0" class="panel-collapse collapse in">
@@ -209,7 +219,7 @@
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse2" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Registro de peticionarios
+                        &nbsp;Clasificación de la petición
                     </a>
                 </h3>
                 <div id="divCollapse2" class="panel-collapse collapse in">
@@ -274,12 +284,12 @@
                 </div>
             </form>
         </div>
-        <div id="menu3" class="tab-pane fade">
+        <div id="menu3" class="tab-pane fade in active">
             <form id="frmClasificacionPeticion">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse3" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Clasificación de la petición
+                        &nbsp;Gestión de la petición
                     </a>
                 </h3>
                 <div id="divCollapse3" class="panel-collapse collapse in">
@@ -305,7 +315,7 @@
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse4" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Conclusión de la petición
+                        &nbsp;Decisión
                     </a>
                 </h3>
                 <div id="divCollapse4" class="panel-collapse collapse in">
