--- a/AtencionTramites.Web/Views/AtencionTramiteSol/GestionPeticion.cshtml
+++ b/AtencionTramites.Web/Views/AtencionTramiteSol/GestionPeticion.cshtml
@@ -4,9 +4,9 @@
 @section ButtonOption {
     @UltimusHelper.Button("BotonesAT_ImprimirPantalla", "btn btn-warning btn-sm", "fa fa-print", "Imprimir Pantalla", false)
     @UltimusHelper.Button("BotonesAT_GuardarRadicado", "btn btn-success btn-sm", "fa fa-floppy-o", "Radicar / Guardar", false)
-    @UltimusHelper.Button("BotonesAT_Completar", "btn btn-danger btn-sm", "fa fa-circle-o", "Ver Tramite", false)
-    @UltimusHelper.Button("BotonesAT_GuardarRadicado", "btn btn-success btn-sm", "fa fa-floppy-o", "Ver Etiqueta", false)
-    @UltimusHelper.Button("BotonesAT_Completar", "btn btn-danger btn-sm", "fa fa-circle-o", "Enviar", false)
+    @UltimusHelper.Button("BotonesAT_VerTramite", "btn-warning btn-sm", "fa fa-history", "Ver Tramite", false)
+    @UltimusHelper.Button("BotonesAT_VerEtiqueta", "btn-sm", "fa fa-eye", "Ver Etiqueta", false)
+    @UltimusHelper.Button("BotonesAT_Enviar", "btn btn-danger btn-sm", "fa fa-circle-o", "Enviar", false)
 }
 
 <style>
@@ -131,6 +131,23 @@
     #frmClasificacionPeticion .active {
         display: block;
     }
+    .tituloPanel {
+        background-color: #78c9c6;
+        color: #ffffff;
+        margin: 5%;
+        padding: 5px;
+        border-radius: 10px;
+    }
+    #udynamic_ClasificacionPeticionAT_AgregarDerecho {
+        float: right;
+        background-color: #78c9c6;
+        padding: 1px;
+    }
+    #udynamic_PeticionarioTablaAT_AgregarPeticionario {
+        float: right;
+        background-color: #78c9c6;
+        padding: 1px;
+    }
 </style>
 
 
@@ -143,13 +160,16 @@
             <a data-toggle="tab" href="#menu1">Anexos del Radicado recibido</a>
         </li>
         <li id="liMenu2">
-            <a data-toggle="tab" href="#menu2">Clasificación de la petición</a>
+            <a data-toggle="tab" href="#menu2">Registro de peticionarios</a>
         </li>
-        <li id="liMenu3"  class="active">
-            <a data-toggle="tab" href="#menu3">Gestión de la petición</a>
+        <li id="liMenu3">
+            <a data-toggle="tab" href="#menu3">Clasificación de la petición</a>
         </li>
-        <li id="liMenu4">
-            <a data-toggle="tab" href="#menu4">Decisión</a>
+        <li id="liMenu4" class="active">
+            <a data-toggle="tab" href="#menu4">Gestión de la petición</a>
+        </li>
+        <li id="liMenu5">
+            <a data-toggle="tab" href="#menu5">Decisión</a>
         </li>
     </ul>
     <div class="tab-content">
@@ -165,8 +185,8 @@
                     <div class="contenedor">
                         <div class="columna">
                             <div class="row">
-                                <div class="col-md-6">
-                                    <h3>Datos básicos del peticionario</h3>
+                                <div class="col-12">
+                                    <h3 class="text-center tituloPanel">Datos básicos del peticionario</h3>
 
                                     @UltimusHelper.Dynamic("InfoRadicadoAT_NumeroRadicado")
                                     @UltimusHelper.Dynamic("InfoRadicadoAT_CanalAtencion")
@@ -181,8 +201,8 @@
                         </div>
                         <div class="columna">
                             <div class="row">
-                                <div class="col-md-6">
-                                    <h3>Datos enfoques diferenciales y de género</h3>
+                                <div class="col-12">
+                                    <h3 class="text-center tituloPanel">Datos enfoques diferenciales y de género</h3>
 
                                     @UltimusHelper.Dynamic("InfoRadicadoAT_MiembroGrupoEtnico")
                                     @UltimusHelper.Dynamic("InfoRadicadoAT_SexoAsignado")
@@ -207,7 +227,7 @@
                 </h3>
                 <div id="divCollapse1" class="panel-collapse collapse in">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-8">
                             @UltimusHelper.Dynamic("AnexosRadicadoAT_AnexosLista")
                         </div>
                     </div>
@@ -219,24 +239,22 @@
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse2" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Clasificación de la petición
+                        &nbsp;Registro de peticionarios
                     </a>
                 </h3>
                 <div id="divCollapse2" class="panel-collapse collapse in">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-12">
                             @UltimusHelper.Dynamic("PeticionarioTablaAT_PeticionariosLista")
                         </div>
-                        <div style="text-align: right;">
-                            @UltimusHelper.Dynamic("PeticionarioTablaAT_AgregarPeticionario")
-                        </div>
+                       
                     </div>
                     <div class="row">
                         <div class="contenedor">
                             <div class="columna">
                                 <div class="row">
                                     <div class="col-md-10">
-                                        <h3>Datos básicos del usuario (a)</h3>
+                                        <h3 class="tituloPanel">Datos básicos del usuario (a)</h3>
                                         @UltimusHelper.Dynamic("PeticionarioAT_TipoSolicitante")
                                         @UltimusHelper.Dynamic("PeticionarioAT_Anonimo")
                                         @UltimusHelper.Dynamic("PeticionarioAT_TipoDocId")
@@ -264,7 +282,7 @@
                             <div class="columna">
                                 <div class="row">
                                     <div class="col-md-10">
-                                        <h3>Datos enfoques diferenciales y de género</h3>
+                                        <h3 class="tituloPanel">Datos enfoques diferenciales y de género</h3>
                                         @UltimusHelper.Dynamic("PeticionarioEnfoqueAT_MiembroGrupoEtnico")
                                         @UltimusHelper.Dynamic("PeticionarioEnfoqueAT_GrupoEtnico")
                                         @UltimusHelper.Dynamic("PeticionarioEnfoqueAT_SexoAsignado")
@@ -284,22 +302,24 @@
                 </div>
             </form>
         </div>
-        <div id="menu3" class="tab-pane fade in active">
+        <div id="menu3" class="tab-pane fade">
             <form id="frmClasificacionPeticion">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse3" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Gestión de la petición
+                        &nbsp;Clasificación de la petición
                     </a>
                 </h3>
                 <div id="divCollapse3" class="panel-collapse collapse in">
                     <div class="row">
-                        <div class="col-md-6 ">
+                        <div class="col-md-8 ">
                             @UltimusHelper.Dynamic("ClasificacionPeticionAT_TipoPeticion")
                             @UltimusHelper.Dynamic("ClasificacionPeticionAT_DescripcionTipoPeticion")
                             @UltimusHelper.Dynamic("ClasificacionPeticionAT_AreaDerechos")
                             @UltimusHelper.Dynamic("ClasificacionPeticionAT_Derechos")
+                            
                             @UltimusHelper.Dynamic("ClasificacionPeticionAT_AgregarDerecho")
+                            
                             @UltimusHelper.Dynamic("ClasificacionPeticionAT_DerechosLista")
                             @UltimusHelper.Dynamic("ClasificacionPeticionAT_Descripcion")
                             @UltimusHelper.Dynamic("ClasificacionPeticionAT_Observaciones")
@@ -310,12 +330,12 @@
                 </div>
             </form>
         </div>
-        <div id="menu4" class="tab-pane fade">
-            <form id="frmConclusionPeticion">
+        <div id="menu4" class="tab-pane fade in active">
+            <form id="frmConclusionPeticion2">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse4" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Decisión
+                        &nbsp;Gestión de la petición
                     </a>
                 </h3>
                 <div id="divCollapse4" class="panel-collapse collapse in">
@@ -328,7 +348,32 @@
                 </div>
             </form>
         </div>
+        <div id="menu5" class="tab-pane fade">
+            <form id="frmConclusionPeticion">
+                <h3 class="TituloAcordeon">
+                    <a data-toggle="collapse" href="#divCollapse5" style="color: black; text-decoration: none;">
+                        <i class="fa fa-chevron-circle-down"></i>
+                        &nbsp;Decisión
+                    </a>
+                </h3>
+                <div id="divCollapse5" class="panel-collapse collapse in">
+                    <div class="row">
+                        <div class="col-md-6">
+                            @UltimusHelper.Dynamic("DecisionAT_Decision")
+                            @UltimusHelper.Dynamic("DecisionAT_Comentarios")
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+
     </div>
+</div>
+<div id="OpcionesAnexosLectura" style="display:none;">
+    <button type="button" title="Ver" class="btn btn-sm btn-default" onclick="window.open('#RutaVirtualArchivo#')">&nbsp;<i class="fa fa-external-link"></i></button>
+</div>
+<div id="OpcionesEditarFila" style="display:none;">
+    <button type="button" title="Eliminar" class="btn btn-sm btn-default" onclick="Grid_Delete(this)">&nbsp;<i class="fa fa-trash"></i></button>
 </div>
 
 @section scripts{
