--- a/AtencionTramites.Web/Views/AtencionTramiteSol/SeguimientoPeticion.cshtml
+++ b/AtencionTramites.Web/Views/AtencionTramiteSol/SeguimientoPeticion.cshtml
@@ -4,9 +4,9 @@
 @section ButtonOption {
     @UltimusHelper.Button("BotonesAT_ImprimirPantalla", "btn btn-warning btn-sm", "fa fa-print", "Imprimir Pantalla", false)
     @UltimusHelper.Button("BotonesAT_GuardarRadicado", "btn btn-success btn-sm", "fa fa-floppy-o", "Radicar / Guardar", false)
-    @UltimusHelper.Button("BotonesAT_Completar", "btn btn-danger btn-sm", "fa fa-circle-o", "Ver Tramite", false)
-    @UltimusHelper.Button("BotonesAT_GuardarRadicado", "btn btn-success btn-sm", "fa fa-floppy-o", "Ver Etiqueta", false)
-    @UltimusHelper.Button("BotonesAT_Completar", "btn btn-danger btn-sm", "fa fa-circle-o", "Enviar", false)
+    @UltimusHelper.Button("BotonesAT_VerTramite", "btn-warning btn-sm", "fa fa-history", "Ver Tramite", false)
+    @UltimusHelper.Button("BotonesAT_VerEtiqueta", "btn btn-success btn-sm", "fa fa-eye", "Ver Etiqueta", false)
+    @UltimusHelper.Button("BotonesAT_Enviar", "btn btn-danger btn-sm", "fa fa-circle-o", "Enviar", false)
 }
 
 <style>
@@ -143,16 +143,19 @@
             <a data-toggle="tab" href="#menu1">Anexos del Radicado recibido</a>
         </li>
         <li id="liMenu2">
-            <a data-toggle="tab" href="#menu2">Clasificación de la petición</a>
+            <a data-toggle="tab" href="#menu2">Registro de peticionarios</a>
         </li>
         <li id="liMenu3">
-            <a data-toggle="tab" href="#menu3">Gestión de la petición</a>
+            <a data-toggle="tab" href="#menu3">Clasificación de la petición</a>
         </li>
-        <li id="liMenu4" class="active">
-            <a data-toggle="tab" href="#menu4">Seguimiento de la petición</a>
+        <li id="liMenu4">
+            <a data-toggle="tab" href="#menu4">Gestión de la petición</a>
         </li>
-        <li id="liMenu5">
-            <a data-toggle="tab" href="#menu5">Decisión</a>
+        <li id="liMenu5" class="active">
+            <a data-toggle="tab" href="#menu5">Seguimiento de la petición</a>
+        </li>
+        <li id="liMenu6">
+            <a data-toggle="tab" href="#menu6">Decisión</a>
         </li>
     </ul>
     <div class="tab-content">
@@ -222,7 +225,7 @@
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse2" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Clasificación de la petición
+                        &nbsp;Registro de peticionarios
                     </a>
                 </h3>
                 <div id="divCollapse2" class="panel-collapse collapse in">
@@ -292,7 +295,7 @@
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse3" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Gestión de la petición
+                        &nbsp;Clasificación de la petición
                     </a>
                 </h3>
                 <div id="divCollapse3" class="panel-collapse collapse in">
@@ -313,38 +316,30 @@
                 </div>
             </form>
         </div>
-        <div id="menu4" class="tab-pane fade in active">
-            <form id="frmClasificacionPeticion">
+        <div id="menu4" class="tab-pane fade">
+            <form id="frmConclusionPeticion">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse4" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Seguimiento de la petición
+                        &nbsp;Gestión de la petición
                     </a>
                 </h3>
                 <div id="divCollapse4" class="panel-collapse collapse in">
                     <div class="row">
-                        <div class="col-md-6 ">
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_TipoPeticion")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_DescripcionTipoPeticion")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_AreaDerechos")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_Derechos")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_AgregarDerecho")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_DerechosLista")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_Descripcion")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_Observaciones")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_RespuestaEscrita")
-                            @UltimusHelper.Dynamic("ClasificacionPeticionAT_ConclusionAsesoria")
+                        <div class="col-md-6">
+                            @UltimusHelper.Dynamic("DecisionAT_Decision")
+                            @UltimusHelper.Dynamic("DecisionAT_Comentarios")
                         </div>
                     </div>
                 </div>
             </form>
         </div>
-        <div id="menu5" class="tab-pane fade">
-            <form id="frmConclusionPeticion">
+        <div id="menu5" class="tab-pane fade  in active">
+            <form id="frmSeguimientoPeticion">
                 <h3 class="TituloAcordeon">
                     <a data-toggle="collapse" href="#divCollapse5" style="color: black; text-decoration: none;">
                         <i class="fa fa-chevron-circle-down"></i>
-                        &nbsp;Decisión
+                        &nbsp;Seguimiento de la petición
                     </a>
                 </h3>
                 <div id="divCollapse5" class="panel-collapse collapse in">
@@ -357,8 +352,29 @@
                 </div>
             </form>
         </div>
+        <div id="menu6" class="tab-pane fade">
+            <form id="frmConclusionPeticion">
+                <h3 class="TituloAcordeon">
+                    <a data-toggle="collapse" href="#divCollapse6" style="color: black; text-decoration: none;">
+                        <i class="fa fa-chevron-circle-down"></i>
+                        &nbsp;Decisión
+                    </a>
+                </h3>
+                <div id="divCollapse6" class="panel-collapse collapse in">
+                    <div class="row">
+                        <div class="col-md-6">
+                            @UltimusHelper.Dynamic("DecisionAT_Decision")
+                            @UltimusHelper.Dynamic("DecisionAT_Comentarios")
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+
     </div>
 </div>
+
 
 @section scripts{
     @Scripts.Render("~/Scripts/AtencionTramitesSol/SeguimientoPeticion")
